[gd_scene load_steps=6 format=3 uid="uid://ddneexssqfhk2"]

[ext_resource type="Script" uid="uid://djq064s0t5nbh" path="res://O_AN_QUAN/scripts/board_slot.gd" id="1_yo1gl"]
[ext_resource type="FontFile" uid="uid://ctmw7es0q6q2a" path="res://O_AN_QUAN/assets/UTM Azuki.ttf" id="2_7s4xt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yo1gl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7s4xt"]

[sub_resource type="LabelSettings" id="LabelSettings_udxdx"]
font = ExtResource("2_7s4xt")
font_size = 20

[node name="BoardSlot" type="Button"]
offset_right = 208.0
offset_bottom = 196.0
theme_type_variation = &"FlatButton"
theme_override_styles/focus = SubResource("StyleBoxEmpty_yo1gl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7s4xt")
script = ExtResource("1_yo1gl")

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.119
anchor_top = 0.114
anchor_right = 0.119
anchor_bottom = 0.114
offset_left = 10.248
offset_top = 8.656
offset_right = 35.248
offset_bottom = 34.656
label_settings = SubResource("LabelSettings_udxdx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PieceContainer" type="Node2D" parent="."]
position = Vector2(109, 100)

[node name="BorderSprite" type="Sprite2D" parent="."]
